--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<HTml lang="en"
+<head>
+    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"
+<meta http-equiv="X-UA-compatible" content="IE=edge"
+<meta name="viewport" content="width=device-width, initial=scale=1.0"
+<title>sorveteria FK</title>
 
+</head>
+
+<body>
+<h1>sorveteria FK</h1>
+ 
+
+
+
+
+</body>
