--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 <h1>sorveteria FK</h1>
  vai um sorvetinho aí moço (a)?
-  Nossa sorveteria tenta oferecer produtos de qualidade,que é o que o cliente mais busca ao adquirir algum produto.A nossa sorveteria foi desenvolvida para comercialização no centro de Guarapuava,sendo uma empresa de pequeno porte.
+  Nossa sorveteria tenta oferecer produtos de qualidade,
+  que é o que o cliente mais busca ao adquirir algum produto.
+  A nossa sorveteria foi desenvolvida para comercialização no centro de Guarapuava,
+  sendo uma empresa de pequeno porte.
 
 
 
