--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <p> <h1>sorveteria FK</h1></p>
- <id> vai um sorvetinho aí moço (a)?</id>
+     <h1>sorveteria FK</h1>
+ <p> <id> vai um sorvetinho aí moço (a)?</id> </p>
  <p> Nossa sorveteria tenta oferecer produtos de qualidade,</p>
  <p> que é o que o cliente mais busca ao adquirir algum produto.</p>
  <p>A nossa sorveteria foi desenvolvida para comercialização no centro de Guarapuava,</p> 
