--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <HTml lang="en"
 <head>
+    
     <link rel="stylesheet" href="style.css">
+    <img   id="FK"  scr=sorveteria FK.jpg>
 <meta charset="utf-8"
 <meta http-equiv="X-UA-compatible" content="IE=edge"
 <meta name="viewport" content="width=device-width, initial=scale=1.0"
