--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <title></title>
 
 </head>
+<img src="sorveteria ">
 
-<body>
-    <img   id="FK"  scr=sorveteriaFK.jpg>
      <h1>sorveteria FK</h1>
  <p> <id> vai um sorvetinho aí moço (a)?</id> </p>
  <p> Nossa sorveteria tenta oferecer produtos de qualidade,</p>
