--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <title></title>
 
 </head>
-<img src="sorveteria ">
+<img id="sorveteria" src="sorveteria FK.jpg">
+
 
      <h1>sorveteria FK</h1>
  <p> <id> vai um sorvetinho aí moço (a)?</id> </p>
