--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
  <p>A nossa sorveteria foi desenvolvida para comercialização no centro de Guarapuava,</p> 
  
 
-
+ <a href="produtos.html">Produtos</a>
 
 </body>
