--- a/produtos.html
+++ b/produtos.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+picole:r$1.50
+sorvete :R$3.50
+casquinha:R$2.00
+cascão:R$3.50 
+pote:R$9.00
+milkshake:R$7.00
+açai:R$6.00
+geladinho:R$1.50 
 
+
+</body>
+</html>
