--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-picole:r$1.50
+ <P> picole:r$1.50
 sorvete :R$3.50
 casquinha:R$2.00
 cascão:R$3.50 
@@ -15,7 +15,7 @@ pote:R$9.00
 milkshake:R$7.00
 açai:R$6.00
 geladinho:R$1.50 
-
+</P>
 
 </body>
 </html>
