--- a/produtos.html
+++ b/produtos.html
@@ -9,15 +9,15 @@
     <title>Document</title>
 </head>
 <body>
- <P> picole:r$1.50
-sorvete :R$3.50
-casquinha:R$2.00
-cascão:R$3.50 
-pote:R$9.00
-milkshake:R$7.00
-açai:R$6.00
-geladinho:R$1.50 
-</P>
+ <P> picole:r$1.50</P>
+ <P>   sorvete :R$3.50</P>
+ <P>  casquinha:R$2.00</P>
+ <P>  cascão:R$3.50 </P>
+ <P> pote:R$9.00</P>
+ <P>  milkshake:R$7.00</P>
+ <P>  açai:R$6.00</P>
+ <P>  geladinho:R$1.50 </P>
+
 
 </body>
 </html>
