--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img id="produtos" src="nossos produtos.jpg"
  <P> picole:r$1.50</P>
  <P>   sorvete :R$3.50</P>
  <P>  casquinha:R$2.00</P>
