--- a/produtos.html
+++ b/produtos.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <img id="produtos" src="nossos produtos.jpg"
-    
- <P> picole:r$1.50</P>
+
+
  <P>   sorvete :R$3.50</P>
  <P>  casquinha:R$2.00</P>
  <P>  cascão:R$3.50 </P>
@@ -19,7 +19,7 @@
  <P>  milkshake:R$7.00</P>
  <P>  açai:R$6.00</P>
  <P>  geladinho:R$1.50 </P>
-
+<p>picole:R$1.50</p>
 
 </body>
 </html>
